desktop-themes/BlueMenta/gtk-3.0/gtk-widgets.css
/* ... */
.linked GtkMenuButton.menu-button:active:last-child,
.toolbar .linked.raised GtkMenuButton.menu-button:active:last-child,
.toolbar GtkMenuButton.menu-button.linked.raised:active:last-child {
	border-top-left-radius: 0;
}

.linked GtkMenuButton.menu-button:active:first-child,
.toolbar .linked.raised GtkMenuButton.menu-button:active:first-child,
.toolbar GtkMenuButton.menu-button.linked.raised:active:first-child {
	border-top-right-radius: 0;
}

.button.menuitem.menubar:active {
	background-image: none;
	background-color: @menu_bg_color;

	border-radius: 4px 4px 0 0;
	border-image: none;
	border-width: 1px 1px 0 1px;
	border-color: @menu_bg_color;
	border-style: solid;
}

.button.menuitem.menubar:active,
GtkMenuButton.menu-button:active,
.toolbar GtkMenuButton.menu-button:active {
	color: @theme_text_color;
}

GtkMenuButton .menu {
	text-shadow: none;
}

/****************
 * Radiobuttons *
 ****************/

.check,
.radio,
.check:insensitive,
.radio:insensitive {
	background-color: transparent;
	border-style: none;
}

GtkCheckButton:hover,
GtkCheckButton:active:hover,
GtkCheckButton:selected,
GtkCheckButton:selected:focus,
GtkCheckButton:insensitive {
	background-color: transparent;
}

GtkCheckButton.text-button, GtkRadioButton.text-button {
	padding: 1px 2px 4px;
	outline-offset: 0; 
}

/************
 * Toolbars *
 ************/
.toolbar {
	border-style: none;
	border-color: darker (@theme_bg_color);
	padding: 6px;
	background-color: @theme_bg_color;
}

.toolbar .button {
	padding: 1px;
}

.toolbar .button.text-button {
	padding: 2px 16px;
}

.toolbar .button.image-button {
	padding: 5px 4px 4px 5px;
}

.toolbar:insensitive {
	color: alpha (@theme_fg_color, 0.6);
	background-color: @insensitive_bg_color;
}

/********************
 * Menubar Toolbars *
 ********************/
.toolbar.menubar {
	-GtkToolbar-button-relief: normal;
	
	padding: 6px 6px 5px 6px; /* weird padding to compensate border-images
					and eventual top border presence, 
					see selection mode toolbars */

}

/***************
 * Header bars *
 ***************/
.titlebar, GtkCalendar.header,
.header-bar {
	border-width: 0px 0px 0px 0px;
	border-style: solid;
	border-color: shade(@borders, 0.90);
	box-shadow: inset 0 -1px shade(@wm_bg_b, 0.95);
	background-color: @theme_bg_color;
	padding: 6px;
}

.header-bar .button.text-button {
	padding: 2px 16px;
}

.header-bar .button.image-button {
    padding: 4px 5px;
}

.titlebar .title, GtkCalendar.header .title,
.header-bar .title {
	font: Bold;
	padding: 0px 12px;
}

.titlebar .subtitle, GtkCalendar.header .subtitle,
.header-bar .subtitle {
	font-size: smaller;
	padding: 0px 12px;
}

/***************
 * Action bars *
 ***************/
.action-bar {
	border-width: 1px 0 0;
	border-style: solid;
	border-color: shade(@borders, 0.90);

	box-shadow: inset 0 -1px shade(@borders, 1.30);
	background-image: linear-gradient(to bottom,
		shade(@theme_bg_color, 1.05),
		shade(@theme_bg_color, 0.95));

	padding: 6px 6px 5px 6px;
}

.action-bar .button.text-button {
	padding: 2px 16px;
}

.action-bar .button.image-button {
	padding: 5px 5px 4px 5px;
}

.action-bar .title {
	font: Bold 10;
	padding: 0px 12px 0px 12px;
}

.action-bar .subtitle {
	font: 9;
	padding: 0px 12px 0px 12px;
}

/***************
 * Dialog	  *
 ***************/

.prompt,
GtkMessageDialog {
	-GtkDialog-content-area-border: 0;
	-GtkDialog-action-area-border: 12;
	-GtkDialog-button-spacing: 1;
	margin: 0;
	padding: 0;
}

/* middle buttons */
.dialog-action-area.linked .button,
.dialog-action-area.linked .button:active,
.dialog-action-area.linked .button:active:hover,
.dialog-action-area.linked .button:checked,
.dialog-action-area.linked .button:checked:hover,
.dialog-action-area.linked .button:insensitive {
	border-style: solid;
	border-radius: 0;
    border-width: 1px;
/*    border-right-width: 0px;
    border-left-width:  0px;*/
	border-color: @borders;
	border-image: none;
}

.dialog-action-area.linked .button.default,
.dialog-action-area.linked .button.default:active,
.dialog-action-area.linked .button.default:checked,
.dialog-action-area.linked .button.default:insensitive,
.dialog-action-area.linked .button:focus {
	border-style: solid;
	border-radius: 0;
    border-width: 1px;
/*    border-right-width: 0px;
    border-left-width:  0px;*/
	border-color: @theme_selected_bg_color;
	-GtkWidget-focus-line-width: 0;
}

/* left button */
.dialog-action-area.linked .button:first-child,
.dialog-action-area.linked .button:active:first-child,
.dialog-action-area.linked .button:active:hover:first-child,
.dialog-action-area.linked .button:checked:first-child,
.dialog-action-area.linked .button:checked:hover:first-child,
.dialog-action-area.linked .button:insensitive:first-child {
	border-style: solid;
    border-width: 1px;
/*    border-right-width: 0;*/
	border-radius: 3px 0 0px 3px;
	border-color: @borders;
	border-image: none;
}

.dialog-action-area.linked .button.default:first-child,
.dialog-action-area.linked .button.default:active:first-child,
.dialog-action-area.linked .button.default:checked:first-child,
.dialog-action-area.linked .button.default:insensitive:first-child,
.dialog-action-area.linked .button:focus:first-child {
	border-style: solid;
    border-width: 1px;
/*    border-right-width: 0;*/
	border-radius: 3px 0 0px 3px;
	border-color: @theme_selected_bg_color;
	-GtkWidget-focus-line-width: 0;
}

/* right button */
.dialog-action-area.linked .button:last-child,
.dialog-action-area.linked .button:active:last-child,
.dialog-action-area.linked .button:active:hover:last-child,
.dialog-action-area.linked .button:checked:last-child,
.dialog-action-area.linked .button:checked:hover:last-child,
.dialog-action-area.linked .button:insensitive:last-child {
	border-style: solid;
    border-width: 1px;
/*    border-left-width: 0;*/
	border-radius: 0 3px 3px 0;
	border-color: @borders;
	border-image: none;
}
/* ... */

